@@ -483,14 +483,14 @@ td.tabspacer {
 
 .MLForm {
     margin: 0px; 
+    margin-bottom: 2px;
     padding: 0px;
     text-align: right;
 }
 
 .languageSelector {
-    text-align:right; 
-    vertical-align:top;
-    padding:0px; margin: 0px;
+    vertical-align: top;
+    padding: 0px; margin: 0px;
 }
 
 .infoline {
