@@ -1,3 +1,12 @@
+2005-06-21 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b36
+
+	* Change: Possibility to set columnCount to -1 for ALL elements in one row.
+		  (Fixes unnice lang selector with flags)
+
+	* Fix: Comments display was borked when not logged with admin/owner permission.
+
+	* Fix: added <br clear="all"> under language selector for proper table rendering in FF
+
 2005-06-21 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b35
 
 	* New: Added slightly modified Patch #875893 from Alan Harder.
